@@ -30,10 +30,6 @@
             <option tal:repeat="term statusSet" 
                     tal:attributes="value term/value; selected python:order.status == term.value and 'selected' or ''"
                     tal:content="term/title">Status Title</option>
-            <!-- <option selected="selected" value="3" id="form-widgets-status-0">On account</option>
-            <option value="1" id="form-widgets-status-1">Pending (online payment)</option>
-            <option value="2" id="form-widgets-status-2">Confirmed (online payment)</option> -->
-
         </select>
 
         <input type="submit" value="Change status" class="submit-widget button-field context" name="form.buttons.save" id="form-buttons-save">
